Deploy environment change

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -3,10 +3,10 @@ name: Deploy to Railway
 on:
   push:
     branches:
-      - main
+      - dev
   pull_request:
     branches:
-      - main
+      - dev
 
 env:
   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
